--- a/app/views/layouts/notable_web/application.html.erb
+++ b/app/views/layouts/notable_web/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Notable</title>
+    <title>Notable | Pagy Edition</title>
 
     <meta charset="utf-8" />
 
